--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.1.0",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
+    "next": "14.2.30",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.30"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.30"
+    "eslint-config-next": "14.2.30",
+    "typescript": "^5"
   }
 }
